# rust-agent-based-models

./: .gitignore  .gitlab-ci.yml  .travis.yml  Backup of Correa sanctioning model outline.wbk  Backup of Correa sanctioning model.wbk  Cargo.toml  Correa sanctioning model outline.docx  Correa sanctioning model.docx  README.md  clear.sh  create_movie.sh
.github/workflows/: rust.yml
src/: main.rs
