[package]
name = "rust-agent-based-models"
version = "0.1.0"
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all-graphics"] # Rust performs tests using these features only. You are on your own when using different features.
# default = ["no-graphics"] # Activate this for a high performance model that only outputs tables, no graphics.
all-graphics = ["landscape-graphics", "net-graphics"]
no-graphics = ["landscape", "net"] # 
landscape-graphics = ["landscape", "graphics"]
net-graphics = ["net", "graphics"]
graphics = [] # Enable figure outputs
landscape = [] # Enable the landscape
net = [] # Enable social networks

[dependencies]
plotters = "0.2.12"
rand =  "0.7.3"
rand_distr = "0.2.2"
rayon = "1.3.0"
slotmap = "0.4.0"
wrapping_coords2d = "0.1.9"
