[package]
name = "rust-agent-based-models"
version = "0.1.0"
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all-graphics", "csv-output"] # This sofware comes with all features activated: landscape and networks with figures and csv output
example = ["landscape-graphics", "net"] # This example differs in that there are no figures or csv output for networks; the model has networks, tough
all-graphics = ["landscape-graphics", "net-graphics"]
csv-output = ["agent-metrics", "landscape-csv", "net-csv"] # csv outputs describe agents by default. List additional outputs here.

landscape-graphics = ["landscape-metrics", "graphics"]
net-graphics = ["net-metrics", "graphics"]

landscape-csv = ["landscape-metrics"]
net-csv = ["net-metrics"]

# The following features use memory; enable those that are strictly necessary.
graphics = ["agent-metrics"] # Enable figures; by default, figures describe agents only.
agent-metrics = [] # Accumulate metrics from agents
landscape-metrics = ["landscape"] # Accumulate metrics from the landscape
net-metrics = ["net"] # Accumulate metrics from the social network

# The following features consume CPU time; enable those that are strictly necessary.
landscape = [] # Enable the landscape
net = [] # Enable social networks

#[cfg(any(feature = "landscape-graphics", all(feature = "csv-output", feature = "landscape")))]
# Consider this use case: Duplicate the above line to apply it to a new member of struct TimeStepResults; this new member is an outcome
# of the net feature, so you change "landscape" to "net" by hand. You thought that the word "landscape" occurs only once in the line,
# so you have inadvertedly caused an error. The landscape-csv feature exists to prevent this error.

[dependencies]
plotters = "0.3"
rand =  "0.7"
rand_distr = "0.3"
rand_pcg = "0.2"
rayon = "1.5"
slotmap = "0.4"
wrapping_coords2d = "0.1"
