#  This file is part of rust-agent-based-models:
#  Reliable and efficient agent-based models in Rust
#  
#   Copyright 2020 Fabio A. Correa Duran facorread@gmail.com
#  
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  
#      http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[package]
name = "rust-agent-based-models"
version = "0.1.0"
authors = ["Fabio A. Correa Duran <facorread@gmail.com>"]
description = "Reliable and efficient agent-based models in Rust"
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/facorread/rust-agent-based-models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all-graphics", "csv-output"] # This sofware comes with all features activated: landscape and networks with figures and csv output
example = ["landscape-graphics", "net"] # This example differs in that there are no figures or csv output for networks; the model has networks, tough
all-graphics = ["landscape-graphics", "net-graphics"]
csv-output = ["agent-metrics", "landscape-csv", "net-csv"] # csv outputs describe agents by default. List additional outputs here.

landscape-graphics = ["landscape-metrics", "graphics"]
net-graphics = ["net-metrics", "graphics"]

landscape-csv = ["landscape-metrics"]
net-csv = ["net-metrics"]

# The following features use memory; enable those that are strictly necessary.
graphics = ["agent-metrics"] # Enable figures; by default, figures describe agents only.
agent-metrics = [] # Accumulate metrics from agents
landscape-metrics = ["landscape"] # Accumulate metrics from the landscape
net-metrics = ["net"] # Accumulate metrics from the social network

# The following features consume CPU time; enable those that are strictly necessary.
landscape = [] # Enable the landscape
net = [] # Enable social networks

#[cfg(any(feature = "landscape-graphics", all(feature = "csv-output", feature = "landscape")))]
# Consider this use case: Duplicate the above line to apply it to a new member of struct TimeStepResults; this new member is an outcome
# of the net feature, so you change "landscape" to "net" by hand. You thought that the word "landscape" occurs only once in the line,
# so you have inadvertedly caused an error. The landscape-csv feature exists to prevent this error.

[dependencies]
plotters = "0.3.0"
rand =  "0.7.3"
rand_distr = "0.3.0"
rand_pcg = "0.2.1"
rayon = "1.5.0"
slotmap = "0.4.0"
wrapping_coords2d = "0.1.9"
